[package]
name = "tokio-irc-client"
version = "0.2.1"
authors = ["Joshua R. Rodgers <bytemr@gmail.com>"]
license = "Apache-2.0/MIT"
description = "IRCv3 compatible client library using tokio and futures."
repository = "https://github.com/Mr-Byte/tokio-irc-client"

[features]
tls = ["tokio-tls", "native-tls"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
error-chain = "0.10"
pircolate = "0.2"

# Optional TLS dependencies
tokio-tls = { version = "0.1", optional = true }
native-tls = { version = "0.1", optional = true }